--- a/language-parser.cabal
+++ b/language-parser.cabal
@@ -36,6 +36,8 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , sqlite-simple
+    , text
   default-language: Haskell2010
 
 executable language-parser-exe
@@ -48,6 +50,8 @@ executable language-parser-exe
   build-depends:
       base >=4.7 && <5
     , language-parser
+    , sqlite-simple
+    , text
   default-language: Haskell2010
 
 test-suite language-parser-test
@@ -61,4 +65,6 @@ test-suite language-parser-test
   build-depends:
       base >=4.7 && <5
     , language-parser
+    , sqlite-simple
+    , text
   default-language: Haskell2010
