--- a/language-parser.cabal
+++ b/language-parser.cabal
@@ -31,6 +31,7 @@ library
       Lib
       Words
       PhoneticChanges
+      Print.UnescapingPrint
   other-modules:
       Paths_language_parser
   hs-source-dirs:
@@ -40,6 +41,7 @@ library
     , sqlite-simple
     , text 
     , regex-compat
+    , directory
   default-language: Haskell2010
 
 executable language-parser-exe
