--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,9 @@ extra-source-files:
 # common to point users to the README.md file.
 description:         Please see the README on GitHub at <https://github.com/githubuser/language-parser#readme>
 
+default-extensions:
+- OverloadedStrings
+
 dependencies:
 - classy-prelude
 - base
