--- a/package.yaml
+++ b/package.yaml
@@ -47,6 +47,7 @@ library:
   - -Wincomplete-record-updates
   - -Wincomplete-uni-patterns
   - -Wredundant-constraints
+  - -Wno-unused-top-binds
 
 
 
