--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@
 #
 # Copy these contents into the root directory of your Github project in a file
 # named .travis.yml
+version: ~> 1.0
 
 # Choose a build environment
 dist: bionic
