--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,8 @@ after_failure:
   - curl -X POST https://api.telegram.org/bot759756758:$TELEGRAM_NOTIFY/sendMessage -d chat_id=54774234 -d "text=OwlbearDM language parser \`build failed\` for *$TRAVIS_BRANCH* [#$TRAVIS_BUILD_NUMBER]($TRAVIS_BUILD_WEB_URL). %0D %0D $TRAVIS_COMMIT_MESSAGE" -d "parse_mode=Markdown"
 after_success:
   - curl -X POST https://api.telegram.org/bot759756758:$TELEGRAM_NOTIFY/sendMessage -d chat_id=54774234 -d "text=OwlbearDM language parser \`build success!\` for *$TRAVIS_BRANCH* [#$TRAVIS_BUILD_NUMBER]($TRAVIS_BUILD_WEB_URL). %0D %0D $TRAVIS_COMMIT_MESSAGE" -d "parse_mode=Markdown"
-  - if [ "$TRAVIS_BRANCH" == "master" ]; then  
-      stack haddock --haddock-arguments "--odir=$PWD/docs" &&
-      git add --all &&
-      git commit -m "Docs updated";
-    fi
+  # - if [ "$TRAVIS_BRANCH" == "master" ]; then  
+  #     stack haddock --haddock-arguments "--odir=$PWD/docs" &&
+  #     git add --all &&
+  #     git commit -m "Docs updated";
+  #   fi
