--- a/package.yaml
+++ b/package.yaml
@@ -86,3 +86,17 @@ tests:
     - language-parser
     - tasty
     - tasty-hspec
+
+
+benchmarks:
+  language-parser-benchmarks:
+    main:                Bench.hs
+    source-dirs:         bench
+    ghc-options:
+      - -O2
+      - -rtsopts
+      - -threaded
+      - -with-rtsopts=-N
+    dependencies:
+    - criterion
+    - language-parser
