--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,13 @@ addons:
     packages:
       - libgmp-dev
 
+services:
+  - postgresql
+
+before_script:
+  - psql -c 'create database wiki;' -U postgres
+
+
 before_install:
 # Download and unpack the stack executable
 - mkdir -p ~/.local/bin
