--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ services:
 
 
 before_script:
-  - cd Docker  && docker-compose build && docker-compose up -d;
-  - cd test  && docker-compose build && docker-compose up -d;
+  - cd $HOME/Docker  && docker-compose build && docker-compose up -d;
+  - cd $HOME/test  && docker-compose build && docker-compose up -d;
 
 
 before_install:
