--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ language: generic
 cache:
   directories:
   - $HOME/.stack
-  - docker_images
+  - $HOME/docker_images
 
 # Ensure necessary system libraries are present
 addons:
@@ -41,7 +41,7 @@ before_install:
 - mkdir -p ~/.local/bin
 - export PATH=$HOME/.local/bin:$PATH
 - travis_retry curl -L https://get.haskellstack.org/stable/linux-x86_64.tar.gz | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
-- docker load -i docker_images/images.tar || true
+- docker load -i $HOME/docker_images/images.tar || true
 
 install:
 # Build dependencies
@@ -63,4 +63,4 @@ after_success:
   #   fi
 
 before_cache:
-  - docker save -o docker_images/images.tar $(docker images -a -q)
+  - docker save -o $HOME/docker_images/images.tar $(docker images -a -q)
