--- a/package.yaml
+++ b/package.yaml
@@ -48,19 +48,22 @@ library:
     - servant
     - servant-client
     - servant-server
+    - servant-swagger
+    - swagger2
     - template-haskell
     - text
     - time
     - transformers
+    - wai-cors
     - warp
   ghc-options:
-    - '-Wall'
-    - '-Werror'
-    - '-Wincomplete-record-updates'
-    - '-Wincomplete-uni-patterns'
-    - '-Wredundant-constraints'
-    - '-Wno-unused-top-binds'
-    - '-O2'
+    - "-Wall"
+    - "-Werror"
+    - "-Wincomplete-record-updates"
+    - "-Wincomplete-uni-patterns"
+    - "-Wredundant-constraints"
+    - "-Wno-unused-top-binds"
+    - "-O2"
   source-dirs: src
 
 executables:
@@ -68,9 +71,9 @@ executables:
     dependencies:
       - language-parser
     ghc-options:
-      - '-threaded'
-      - '-rtsopts'
-      - '-with-rtsopts=-N'
+      - "-threaded"
+      - "-rtsopts"
+      - "-with-rtsopts=-N"
     main: Main.hs
     source-dirs: app
 
@@ -84,9 +87,9 @@ tests:
       - tasty
       - tasty-hspec
     ghc-options:
-      - '-threaded'
-      - '-rtsopts'
-      - '-with-rtsopts=-N'
+      - "-threaded"
+      - "-rtsopts"
+      - "-with-rtsopts=-N"
     main: Spec.hs
     source-dirs: test
 
@@ -96,9 +99,9 @@ benchmarks:
       - criterion
       - language-parser
     ghc-options:
-      - '-O2'
-      - '-rtsopts'
-      - '-threaded'
-      - '-with-rtsopts=-N'
+      - "-O2"
+      - "-rtsopts"
+      - "-threaded"
+      - "-with-rtsopts=-N"
     main: Bench.hs
     source-dirs: bench
