--- a/package.yaml
+++ b/package.yaml
@@ -34,6 +34,7 @@ library:
     - bytestring
     - directory
     - esqueleto
+    - http-api-data
     - monad-logger
     - persistent
     - persistent-postgresql
